--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -9,7 +9,7 @@
 						<Button id="AddEvento" icon="sap-icon://add" type="Transparent" press="onAddEvento" visible="false" />
 						<Button id="DeleteAll" icon="sap-icon://delete" type="Transparent" press="onDeleteAll" visible="false" />
 					</Toolbar>
-					<Table id="idProductsTable" growing="true" growingThreshold="10">
+					<Table id="idEventiTable" growing="true" growingThreshold="10">
 						<columns>
 							<Column>
 								<Text text="Evento"/>
